--- a/imports/kubernetes.yaml
+++ b/imports/kubernetes.yaml
@@ -22,34 +22,34 @@ node_types:
 
 node_templates:
 
-  kubernetes_load:
+  kubernetes_lb:
     type: cloudify.nodes.ApplicationServer.kubernetes.LoadBalancer
     relationships:
-    - target: k8s_load_host
+    - target: k8s_lb_host
       type: cloudify.relationships.contained_in
 
-policy_types:
-  scale_policy_type:
-    source: policies/scale.clj
-    properties:
-      policy_operates_on_group:
-        default: true
-      service_selector:
-        description: regular expression that selects the metric to be measured
-        default: ".*"
-      moving_window_size:
-        description: the moving window for individual sources in secs
-        default: 10
-      scale_threshold:
-        description: the value to trigger scaling over aggregrated moving values
-      scale_limit:
-        description: scaling limit
-        default: 10
-      scale_direction:
-        description: scale up ('<') or scale down ('>')
-        default: '<'
-      cooldown_time:
-        description: the time to wait before evaluating again after a scale
-        default: 60
+# policy_types:
+#   scale_policy_type:
+#     source: policies/scale.clj
+#     properties:
+#       policy_operates_on_group:
+#         default: true
+#       service_selector:
+#         description: regular expression that selects the metric to be measured
+#         default: ".*"
+#       moving_window_size:
+#         description: the moving window for individual sources in secs
+#         default: 10
+#       scale_threshold:
+#         description: the value to trigger scaling over aggregrated moving values
+#       scale_limit:
+#         description: scaling limit
+#         default: 10
+#       scale_direction:
+#         description: scale up ('<') or scale down ('>')
+#         default: '<'
+#       cooldown_time:
+#         description: the time to wait before evaluating again after a scale
+#         default: 60
 
-groups: {}
+# groups: {}
